--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Exemplo de Fundo com Imagem e Cor</title>
+    <title>SouVibe</title>
     <style>
         body {
             background-color: #E7BF06;
